# multi-fingered_grasp_planners

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/grasp_common_library/: gen_inference_voxel.h  gen_voxel_from_pcd.h
launch/: gen_grasp_rgbd_data.launch  gen_grasp_voxel.launch  grasp_active_learning.launch  grasp_cnn_inference.launch  grasp_prev_al.launch  grasp_type_inference.launch  grasp_voxel_inference.launch
msg/: HandConfig.msg  VisualInfo.msg
src/grasp_active_learning/: active_data_loader.py  active_planner_server.py  grasp_active_learner.py  grasp_active_learner_fk.py  grasp_al_server.py
src/grasp_cnn_planner/: compute_finger_tip_location.py  cross_validation.py  gen_rgbd_gazebo_kinect.py  gen_rgbd_patches.py  gen_rgbd_real_kinect2.py  grasp_cnn_inf_server.py  grasp_net_interface.py  grasp_rgbd_config_net.py  grasp_rgbd_inf.py  grasp_rgbd_loader.py  grasp_rgbd_patch_reg.py  grasp_rgbd_patches_alexnet.py  grasp_rgbd_patches_deeper_net.py  grasp_rgbd_patches_net.py  hand_model.py  plot_roc_pr_curve.py  proc_rgbd_grasp_data.py  run_grasp_inf.py  run_grasp_inf_cornell.py  train_test_config_net.py  tsne_vis.py
src/grasp_common_library/: align_object_frame.py  broadcast_tf.py  compute_pcd_normal.cpp  data_proc_lib.py  gen_inference_voxel.cpp  gen_voxel_from_pcd.cpp  grasp_common_functions.py  grasp_kdl.py  set_config_limits.py  show_voxel.py
src/grasp_type_planner/: bc_palm_tf_in_obj.py  gen_prec_pow_grasp_data.py  get_exp_suc_prob.py  grasp_pgm_inf_server.py  grasp_pgm_inf_sim.py  grasp_pgm_inference.py  grasp_pgm_learner.py  grasp_pgm_learner_sim.py  latent_classifier_isrr_data.py  map_classifier.py  plot_posterior.ipynb  plot_posterior.py  plot_roc_grasp_type.py  plot_roc_pr_curve.py  proc_grasp_data.py  test_grasp_rgbd.py  test_obj_segmentation.cpp
src/grasp_voxel_planner/: fit_grasp_prior.py  grasp_data_loader.py  grasp_prior_network.py  grasp_success_network.py  grasp_voxel_inf_server.py  grasp_voxel_inference.py  (+5 more)
srv/: ActiveDataUpdate.srv  ActiveModelUpdate.srv  GenGraspVoxel.srv  GenInfVoxel.srv  GetPcdNormal.srv  GraspActiveLearn.srv  GraspCnnInfer.srv  GraspPgmInf.srv  GraspSampleInf.srv  GraspVoxelInfer.srv  PrevGraspActiveLearn.srv  UpdateObjectPose.srv  UpdatePalmPose.srv  UpdatePalmPosesInObj.srv  UpdatePriorPoses.srv
(+23 files in other folders)
